--- a/style/login.css
+++ b/style/login.css
@@ -42,6 +42,7 @@ body * {
     align-items: center;
 }
 
+
 .card-login{
     width: 60%;
     display: flex;
@@ -58,6 +59,11 @@ body * {
     color: #00ff88;
     font-weight: 800;
     margin: 0;
+}
+
+form{
+    position: absolute;
+    align-items: center;
 }
 
 .textfield{
@@ -95,9 +101,6 @@ body * {
 }
 
 .btn-login{ 
-    position: absolute;
-    right: 50px;
-    width: 100%;
     padding: 16px 0px;
     margin: 25px;
     border: none;
@@ -110,6 +113,10 @@ body * {
     background: #00ff88;
     cursor: pointer;
     box-shadow: 0px 10px 40px -12px #00ff8052;
+}
+p > .cadastro{
+    text-decoration: none;
+    color: white;
 }
 
 @media only screen and ( max-width: 950px){
