--- a/style/login2.css
+++ b/style/login2.css
@@ -42,7 +42,6 @@ body * {
     align-items: center;
 }
 
-
 .card-login{
     width: 60%;
     display: flex;
@@ -59,11 +58,6 @@ body * {
     color: #00ff88;
     font-weight: 800;
     margin: 0;
-}
-
-form{
-    position: absolute;
-    align-items: center;
 }
 
 .textfield{
@@ -101,8 +95,9 @@ form{
 }
 
 .btn-login{ 
+    width: 100%;
     padding: 16px 0px;
-    margin: 25px;
+    margin: 15px auto;
     border: none;
     border-radius: 8px;
     outline: none;
@@ -114,9 +109,17 @@ form{
     cursor: pointer;
     box-shadow: 0px 10px 40px -12px #00ff8052;
 }
-p > .cadastro{
+.cadastro{
     text-decoration: none;
+    color: #00ff88;
+    padding: 5px;
+    background-color: #2b134b;
+    border-radius: 9px;
+    transition: .3s;
+}
+.cadastro:hover{
     color: white;
+    background-color: #201b2c;
 }
 
 @media only screen and ( max-width: 950px){
